# tiny-2ltt

./: Cargo.toml  README.md
examples/: demo.rs  fastpow.2ltt  identity.2ltt  power.2ltt  staged_if.2ltt  unroll.2ltt
src/: driver.rs  elab.rs  errors.rs  eval.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.lalrpop  pretty.rs  syntax.rs
tests/: snapshots.rs
tests/cases/: 01_quote.2ltt  02_const.2ltt  03_power.2ltt  04_inc_n.2ltt  05_pick.2ltt  06_stage1_if.2ltt  07_compose.2ltt  08_err_stage_var.2ltt  09_err_splice_stage0.2ltt  10_nested.2ltt  11_fastpow.2ltt
tests/snapshots/: snapshots__cases@01_quote.2ltt.snap  snapshots__cases@02_const.2ltt.snap  snapshots__cases@03_power.2ltt.snap  snapshots__cases@04_inc_n.2ltt.snap  snapshots__cases@05_pick.2ltt.snap  snapshots__cases@06_stage1_if.2ltt.snap  snapshots__cases@07_compose.2ltt.snap  snapshots__cases@08_err_stage_var.2ltt.snap  snapshots__cases@09_err_splice_stage0.2ltt.snap  snapshots__cases@10_nested.2ltt.snap  snapshots__cases@11_fastpow.2ltt.snap
